--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
   "name": "trustbank-frontend",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
-    "@mui/material": "^5.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1"
+    "@mui/material": "^5.13.2",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build"
+  "devDependencies": {
+    "vite": "^5.0.0"
   }
 }
